@@ -1,7 +1,0 @@
-YamCha is a generic, customizable, and open source text chunker oriented toward
-a lot of NLP tasks, such as POS tagging, Named Entity Recognition, base NP
-chunking, and Text Chunking. YamCha is using a state-of-the-art machine learning
-algorithm called Support Vector Machines (SVMs), first introduced by Vapnik in
-1995.
-
-This package is perl module for YamCha.
